--- a/services-dash.html
+++ b/services-dash.html
@@ -1,255 +1,278 @@
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Add Service - Raghuvanshi Health Care</title>
+  <title>Service Creator</title>
   <style>
+    * { box-sizing: border-box; }
     body {
+      font-family: 'Segoe UI', sans-serif;
+      background: #f1f5f9;
       margin: 0;
-      font-family: "Segoe UI", sans-serif;
-      background: #f4f9f9;
-      padding: 2rem;
+      padding: 1rem;
+    }
+
+    .container {
       display: flex;
       flex-direction: column;
-      align-items: center;
-    }.container {
-  display: flex;
-  flex-direction: column;
-  gap: 2rem;
-  max-width: 1200px;
-  width: 100%;
-}
+      gap: 2rem;
+      max-width: 1200px;
+      margin: auto;
+    }
 
-@media(min-width: 768px) {
-  .container {
-    flex-direction: row;
-  }
-}
+    @media(min-width: 768px) {
+      .container {
+        flex-direction: row;
+      }
+    }
 
-.form-container, .preview {
-  background: white;
-  border-radius: 16px;
-  padding: 1.5rem;
-  flex: 1;
-  box-shadow: 0 0 25px rgba(0, 0, 0, 0.08);
-}
+    .form-container, .preview {
+      flex: 1;
+      background: white;
+      padding: 2rem;
+      border-radius: 15px;
+      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.1);
+    }
 
-h2, h3 {
-  color: #00796b;
-  text-align: center;
-  margin-bottom: 1rem;
-}
+    h2 {
+      text-align: center;
+      color: #1976d2;
+      margin-top: 0;
+    }
 
-.form-group {
-  margin-bottom: 1rem;
-}
+    form input, form textarea, form select {
+      width: 100%;
+      padding: 0.8rem;
+      margin: 0.5rem 0;
+      border-radius: 10px;
+      border: 1px solid #ccc;
+      font-size: 1rem;
+    }
 
-label {
-  font-weight: bold;
-  display: block;
-  margin-bottom: 0.4rem;
-}
+    button {
+      width: 100%;
+      background: #1976d2;
+      color: white;
+      padding: 0.8rem;
+      border: none;
+      font-size: 1rem;
+      border-radius: 10px;
+      cursor: pointer;
+      transition: background 0.3s ease;
+    }
 
-input, textarea, select {
-  width: 100%;
-  padding: 0.75rem;
-  border: 1px solid #ccc;
-  border-radius: 10px;
-  font-size: 1rem;
-}
+    button:hover {
+      background: #0d47a1;
+    }
 
-button {
-  background-color: #00796b;
-  color: white;
-  padding: 0.8rem;
-  font-weight: bold;
-  border: none;
-  border-radius: 10px;
-  width: 100%;
-  cursor: pointer;
-  margin-top: 1rem;
-  font-size: 1rem;
-  transition: 0.3s;
-}
+    .msg {
+      text-align: center;
+      margin-top: 1rem;
+    }
 
-button:hover {
-  background-color: #004d40;
-}
+    .card {
+      border-radius: 15px;
+      overflow: hidden;
+      box-shadow: 0 4px 16px rgba(0,0,0,0.1);
+      background: white;
+      transition: transform 0.3s ease;
+    }
 
-#previewImage {
-  width: 100%;
-  border-radius: 12px;
-  margin-bottom: 1rem;
-  display: none;
-}
+    .card:hover {
+      transform: scale(1.01);
+    }
 
-.preview-content p {
-  margin: 0.5rem 0;
-}
+    .card img {
+      width: 100%;
+      height: 200px;
+      object-fit: cover;
+    }
 
-.tags {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 0.5rem;
-  margin-top: 0.5rem;
-}
+    .card-body {
+      padding: 1rem;
+    }
 
-.tag {
-  background-color: #e0f2f1;
-  padding: 0.4rem 0.75rem;
-  border-radius: 30px;
-  font-size: 0.85rem;
-  color: #00796b;
-  font-weight: bold;
-}
+    .card-body h3 {
+      margin: 0 0 0.5rem;
+      color: #222;
+    }
 
+    .card-body p {
+      margin: 0.5rem 0;
+      color: #555;
+    }
+
+    .tags {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 0.4rem;
+    }
+
+    .tag {
+      background: #1976d2;
+      color: white;
+      padding: 0.3rem 0.7rem;
+      border-radius: 20px;
+      font-size: 0.75rem;
+    }
+
+    .img-preview {
+      width: 100%;
+      height: 200px;
+      object-fit: cover;
+      border: 1px solid #ccc;
+      border-radius: 10px;
+      margin-bottom: 1rem;
+    }
   </style>
-  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
-    import { getFirestore, collection, addDoc } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
-    import { getStorage, ref, uploadBytes, getDownloadURL } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-storage.js";const firebaseConfig = {
-  apiKey: "AIzaSyAbknkfD6Je1a3wDZRTzn6lC62CNUhhwLc",
-  authDomain: "store-471f1.firebaseapp.com",
-  projectId: "store-471f1",
-  storageBucket: "store-471f1.appspot.com",
-  messagingSenderId: "619523242611",
-  appId: "1:619523242611:web:fdfa53044c62f844574806",
-  measurementId: "G-16C8MYT70G"
-};
 
-const app = initializeApp(firebaseConfig);
-const db = getFirestore(app);
-const storage = getStorage(app);
-
-const form = document.getElementById('serviceForm');
-form.addEventListener('submit', async (e) => {
-  e.preventDefault();
-
-  const title = document.getElementById('title').value;
-  const price = parseFloat(document.getElementById('price').value);
-  const description = document.getElementById('description').value;
-  const category = document.getElementById('category').value;
-  const duration = document.getElementById('duration').value;
-  const gender = document.getElementById('providerGender').value;
-  const rating = parseFloat(document.getElementById('rating').value || 0);
-  const imageFile = document.getElementById('imageFile').files[0];
-
-  if (!imageFile) {
-    alert("Please select an image file.");
-    return;
-  }
-
-  const imageRef = ref(storage, `services/${Date.now()}_${imageFile.name}`);
-  await uploadBytes(imageRef, imageFile);
-  const imageUrl = await getDownloadURL(imageRef);
-
-  await addDoc(collection(db, 'services'), {
-    title,
-    price,
-    description,
-    category,
-    duration,
-    gender,
-    rating,
-    imageUrl,
-    createdAt: new Date()
-  });
-
-  alert("✅ Service added successfully!");
-  form.reset();
-  document.getElementById('previewImage').style.display = 'none';
-  document.getElementById('previewTags').innerHTML = '';
-});
-
-  </script>
+  <!-- Firebase -->
+  <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-auth-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-firestore-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-storage-compat.js"></script>
 </head>
-<body>  <div class="container">
-    <div class="form-container">
-      <h2>Add New Service</h2>
-      <form id="serviceForm">
-        <div class="form-group">
-          <label for="title">Service Title</label>
-          <input type="text" id="title" required />
-        </div>
-        <div class="form-group">
-          <label for="price">Price (₹)</label>
-          <input type="number" id="price" required />
-        </div>
-        <div class="form-group">
-          <label for="description">Description</label>
-          <textarea id="description" rows="3" required></textarea>
-        </div>
-        <div class="form-group">
-          <label for="category">Category</label>
-          <input type="text" id="category" required />
-        </div>
-        <div class="form-group">
-          <label for="duration">Service Duration (optional)</label>
-          <input type="text" id="duration" placeholder="e.g. 30 mins" />
-        </div>
-        <div class="form-group">
-          <label for="providerGender">Service Provider Gender (optional)</label>
-          <select id="providerGender">
-            <option value="">Select</option>
-            <option value="male">👨 Male</option>
-            <option value="female">👩 Female</option>
-            <option value="any">👥 Any</option>
-          </select>
-        </div>
-        <div class="form-group">
-          <label for="rating">Rating (optional)</label>
-          <input type="number" id="rating" min="0" max="5" step="0.1" placeholder="0-5" />
-        </div>
-        <div class="form-group">
-          <label for="imageFile">Service Image</label>
-          <input type="file" id="imageFile" accept="image/*" required />
-        </div>
-        <button type="submit">Add Service</button>
-      </form>
-    </div><div class="preview">
-  <h3>Live Preview</h3>
-  <img id="previewImage" />
-  <div class="preview-content">
-    <p><strong>Title:</strong> <span id="previewTitle">-</span></p>
-    <p><strong>Price:</strong> ₹<span id="previewPrice">-</span></p>
-    <p><strong>Description:</strong> <span id="previewDescription">-</span></p>
-    <p><strong>Category:</strong> <span id="previewCategory">-</span></p>
-    <div class="tags" id="previewTags"></div>
+<body>
+
+<div class="container">
+  <div class="form-container">
+    <h2>Add New Service</h2>
+    <form id="serviceForm">
+      <input type="text" id="name" placeholder="Service Name" required />
+      <textarea id="desc" placeholder="Description" required></textarea>
+      <input type="text" id="category" placeholder="Category" required />
+      <input type="number" id="price" placeholder="Price ₹" required />
+      <input type="number" id="slots" placeholder="Available Slots" required />
+      <input type="number" id="rating" placeholder="Rating (1-5)" min="1" max="5" step="0.1" required />
+      <input type="text" id="duration" placeholder="Duration (e.g., 30 mins)" />
+      <select id="gender">
+        <option value="">Gender Specific (optional)</option>
+        <option value="Male">Male</option>
+        <option value="Female">Female</option>
+      </select>
+      <input type="file" id="imageFile" accept="image/*" required />
+      <img id="previewImg" class="img-preview" src="https://via.placeholder.com/400x200?text=Preview" />
+      <button type="submit">Add Service</button>
+      <div class="msg" id="msg"></div>
+    </form>
+  </div>
+
+  <div class="preview">
+    <h2>Live Preview</h2>
+    <div class="card">
+      <img id="cardImg" src="https://via.placeholder.com/400x200?text=Preview" />
+      <div class="card-body">
+        <h3 id="cardName">Service Name</h3>
+        <p id="cardDesc">Service description...</p>
+        <div class="tags" id="tagBox"></div>
+        <p><strong>₹<span id="cardPrice">0</span></strong> | 🧍 Slots: <span id="cardSlots">0</span></p>
+      </div>
+    </div>
   </div>
 </div>
 
-  </div>  <script>
-    const previewImage = document.getElementById('previewImage');
-    const previewTitle = document.getElementById('previewTitle');
-    const previewPrice = document.getElementById('previewPrice');
-    const previewDescription = document.getElementById('previewDescription');
-    const previewCategory = document.getElementById('previewCategory');
-    const previewTags = document.getElementById('previewTags');
+<script>
+  const firebaseConfig = {
+    apiKey: "AIzaSyAbknkfD6Je1a3wDZRTzn6lC62CNUhhwLc",
+    authDomain: "store-471f1.firebaseapp.com",
+    projectId: "store-471f1",
+    storageBucket: "store-471f1.appspot.com",
+    messagingSenderId: "619523242611",
+    appId: "1:619523242611:web:fdfa53044c62f844574806"
+  };
 
-    function updatePreview() {
-      previewTitle.textContent = document.getElementById('title').value;
-      previewPrice.textContent = document.getElementById('price').value;
-      previewDescription.textContent = document.getElementById('description').value;
-      previewCategory.textContent = document.getElementById('category').value;
+  firebase.initializeApp(firebaseConfig);
+  const auth = firebase.auth();
+  const db = firebase.firestore();
+  const storage = firebase.storage();
 
-      previewTags.innerHTML = '';
-      const duration = document.getElementById('duration').value;
-      const gender = document.getElementById('providerGender').value;
-      const rating = document.getElementById('rating').value;
+  const form = document.getElementById("serviceForm");
+  const msg = document.getElementById("msg");
+  const previewImg = document.getElementById("previewImg");
+  const cardImg = document.getElementById("cardImg");
 
-      if (duration) previewTags.innerHTML += `<span class='tag'>⏱ ${duration}</span>`;
-      if (gender) previewTags.innerHTML += `<span class='tag'>${gender === 'male' ? '👨 Male' : gender === 'female' ? '👩 Female' : '👥 Any'}</span>`;
-      if (rating) previewTags.innerHTML += `<span class='tag'>⭐ ${rating}</span>`;
+  const updatePreview = () => {
+    document.getElementById("cardName").innerText = form.name.value || "Service Name";
+    document.getElementById("cardDesc").innerText = form.desc.value || "Service description...";
+    document.getElementById("cardPrice").innerText = form.price.value || "0";
+    document.getElementById("cardSlots").innerText = form.slots.value || "0";
+
+    const tagBox = document.getElementById("tagBox");
+    tagBox.innerHTML = '';
+    if (form.category.value) tagBox.innerHTML += `<span class="tag">${form.category.value}</span>`;
+    if (form.rating.value) tagBox.innerHTML += `<span class="tag">⭐ ${form.rating.value}</span>`;
+    if (form.duration.value) tagBox.innerHTML += `<span class="tag">${form.duration.value}</span>`;
+    if (form.gender.value) tagBox.innerHTML += `<span class="tag">${form.gender.value}</span>`;
+  };
+
+  ["name", "desc", "category", "price", "slots", "rating", "duration", "gender"].forEach(id => {
+    document.getElementById(id).addEventListener("input", updatePreview);
+  });
+
+  document.getElementById("imageFile").addEventListener("change", e => {
+    const file = e.target.files[0];
+    if (file) {
+      const reader = new FileReader();
+      reader.onload = e => {
+        previewImg.src = e.target.result;
+        cardImg.src = e.target.result;
+      };
+      reader.readAsDataURL(file);
+    }
+  });
+
+  form.addEventListener("submit", async (e) => {
+    e.preventDefault();
+    msg.innerText = "Uploading...";
+
+    const user = auth.currentUser;
+    if (!user) {
+      msg.innerText = "⚠️ Please log in.";
+      return;
     }
 
-    document.getElementById('serviceForm').addEventListener('input', updatePreview);
+    const userDoc = await db.collection("users").doc(user.uid).get();
+    if (!userDoc.exists || userDoc.data().role !== "admin") {
+      msg.innerText = "⛔ Only admins can add services.";
+      return;
+    }
 
-    document.getElementById('imageFile').addEventListener('change', (e) => {
-      const file = e.target.files[0];
-      if (file) {
-        previewImage.src = URL.createObjectURL(file);
-        previewImage.style.display = 'block';
-      }
-    });
-  </script></body>
+    const file = document.getElementById("imageFile").files[0];
+    if (!file) {
+      msg.innerText = "❗ Please select an image.";
+      return;
+    }
+
+    try {
+      const storageRef = storage.ref(`services/${Date.now()}_${file.name}`);
+      await storageRef.put(file);
+      const imageUrl = await storageRef.getDownloadURL();
+
+      const data = {
+        name: form.name.value.trim(),
+        desc: form.desc.value.trim(),
+        category: form.category.value.trim(),
+        price: parseFloat(form.price.value),
+        slots: parseInt(form.slots.value),
+        rating: parseFloat(form.rating.value),
+        duration: form.duration.value.trim(),
+        gender: form.gender.value,
+        image: imageUrl,
+        timestamp: firebase.firestore.FieldValue.serverTimestamp()
+      };
+
+      await db.collection("services").add(data);
+      msg.innerText = "✅ Service added successfully!";
+      form.reset();
+      previewImg.src = cardImg.src = "https://via.placeholder.com/400x200?text=Preview";
+      document.getElementById("tagBox").innerHTML = "";
+    } catch (err) {
+      console.error(err);
+      msg.innerText = "❌ Error adding service.";
+    }
+  });
+</script>
+
+</body>
 </html>
